--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -28,7 +28,12 @@
 	26 - Css media querries (responsive css)
 	
 ****************************/
-
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px white inset;
+}
 input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     background-color: white !important;
     background-image: none;
