--- a/src/main/webapp/app-code/user/personal_bacheca/personal_bacheca.app.style.css
+++ b/src/main/webapp/app-code/user/personal_bacheca/personal_bacheca.app.style.css
@@ -4,6 +4,9 @@
     display: flex;
         width: 100%;
         height: 170px;
+}.flex-container-bacheca-mobile {
+    display: -webkit-flex;
+    display: flex;
 }
 .flex-container-ins {
     display: -webkit-flex;
